Added Patreon link

--- a/donate.html
+++ b/donate.html
@@ -1,14 +1,22 @@
 <html>
-<title>Donations for Ipe development</title>
-<body>
-<h2>Donations for Ipe development</h2>
-<p>If you wish to make a donation to contribute to Ipe development,
-  you can do so by clicking the button below.</p>
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="P62RYXELH3KWQ">
-<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-<img alt="" border="0" src="https://www.paypalobjects.com/de_DE/i/scr/pixel.gif" width="1" height="1">
-</form>
-</body>
+  <head>
+  <title>Sponsoring Ipe development</title>
+  <script src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
+  </head>
+  <body>
+    <h2>Sponsoring Ipe</h2>
+    You have the opportunity to become part of the community that
+    sponsors Ipe development on Patreon:
+    <a href="https://www.patreon.com/bePatron?u=13167110" data-patreon-widget-type="become-patron-button">Become a Patron!</a>
+    <h2>Donations for Ipe development</h2>
+    <p>If you prefer, you can also make a one-time or recurring
+      donation to contribute to Ipe development using Paypal, by
+      clicking the button below.</p>
+    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+      <input type="hidden" name="cmd" value="_s-xclick">
+      <input type="hidden" name="hosted_button_id" value="P62RYXELH3KWQ">
+      <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+      <img alt="" border="0" src="https://www.paypalobjects.com/de_DE/i/scr/pixel.gif" width="1" height="1">
+    </form>
+  </body>
 </html>
