--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <!-- XML file produced from file: webpage.tex
      using Hyperlatex v 15.02 (c) Otfried Cheong
-     on Emacs 24.5.1, Fri Dec  9 22:04:48 2016 -->
+     on Emacs 25.2.2, Fri Oct 26 09:27:18 2018 -->
 <head>
 <title>The Ipe extensible drawing editor</title>
 <meta charset="utf-8" /><meta name="viewport" content="width=device-width,
@@ -190,7 +190,13 @@ See the <span class="tex-emph">install.txt</span> file for instructions.
 </div>
 <p><div
   data-role="collapsible" data-content-theme="e" data-theme="e">
-<h4 id="id6">Wiki</h4>
+<h4 id="id6">Sponsor Ipe development</h4>
+<p>You now have the opportunity to <a href="donate.html">join the
+  community</a> that sponsors Ipe's development.
+</div>
+<p><div
+  data-role="collapsible" data-content-theme="e" data-theme="e">
+<h4 id="id7">Wiki</h4>
 <p>After the manual, your second source of useful information, example
 files, or answers to frequently asked questions is the <a data-role="button"
     data-inline="true" data-mini="true" href="https://github.com/otfried/ipe-wiki/wiki">Ipe 7
@@ -200,7 +206,7 @@ Ipe here.
 </div>
 <p><div
   data-role="collapsible" data-content-theme="e" data-theme="e">
-<h4 id="id7">Mailing lists</h4>
+<h4 id="id8">Mailing lists</h4>
 <p>There are two mailing lists for Ipe. The first mailing list is used
 solely to announce new versions of Ipe, and perhaps new ipelets that
 may be interesting to a broad audience.  Traffic on this list is very
@@ -208,7 +214,7 @@ light, as most messages on this list come from me. You can subscribe
 to the announcement list
 <a data-role="button"
     data-inline="true" data-mini="true" href="http://lists.science.uu.nl/mailman/listinfo/ipe-announce">here</a>.
-<p><span id="id8">
+<p><span id="id9">
 The</span> second list is used to discuss Ipe.  You can subscribe
 <a data-role="button"
     data-inline="true" data-mini="true" href="http://lists.science.uu.nl/mailman/listinfo/ipe-discuss">here</a>.
@@ -218,7 +224,7 @@ that.
 </div>
 <p><p><div
   data-role="collapsible" data-content-theme="e" data-theme="e">
-<h4 id="id9">Reporting bugs</h4>
+<h4 id="id10">Reporting bugs</h4>
 <p>Before reporting a bug, please verify that you have the latest Ipe
 version, and check that the problem is not explained in the
 <span class="tex-emph">frequently asked questions</span> on the <a data-role="button"
@@ -232,12 +238,12 @@ report is to enter it into the bug tracker).
 </div>
 <p><div
   data-role="collapsible" data-content-theme="e" data-theme="e">
-<h4 id="id10">Copyright</h4>
+<h4 id="id11">Copyright</h4>
 <p>The extensible drawing editor Ipe is "free," this means that
 everyone is free to use it and free to redistribute it on certain
 conditions. Ipe is not in the public domain; it is copyrighted
 and there are restrictions on its distribution as follows:
-<p>Copyright &#169; 1993&ndash;2016 Otfried Cheong
+<p>Copyright &#169; 1993&ndash;2018 Otfried Cheong
 <p>This program is free software; you can redistribute it and/or modify
 it under the terms of the <span class="tex-sc">Gnu</span> General Public License as
 published by the Free Software Foundation; either version&nbsp;3 of the
@@ -255,7 +261,7 @@ See the <a data-role="button"
 </div>
 <p><div
   data-role="collapsible" data-content-theme="e" data-theme="e">
-<h4 id="id11">Other downloads</h4>
+<h4 id="id12">Other downloads</h4>
 <p>Older Ipe versions can be found on
 <a data-role="button"
     data-inline="true" data-mini="true" href="https://bintray.com/otfried/generic/ipe">bintray.com</a>.
@@ -265,25 +271,25 @@ See the <a data-role="button"
 These are <span class="tex-emph">available in source form</span> only (A binary for pdftoipe is
 included in the Ipe Windows binary distribution).
 
-<h5 id="id12">Svgtoipe</h5>
+<h5 id="id13">Svgtoipe</h5>
 <p><span class="tex-emph">svgtoipe</span> converts SVG figures to Ipe format.  It cannot handle
 everything in SVG, but should work for geometric objects and
 gradients.  This program is actually a Python script.
 
-<h5 id="id13">Pdftoipe</h5>
+<h5 id="id14">Pdftoipe</h5>
 <p><span class="tex-emph">pdftoipe</span> converts arbitrary PDF files to Ipe's XML format, or
 at least it tries to.  You'll need the poppler library to compile it.
 
-<h5 id="id14">Matplotlib backend</h5>
+<h5 id="id15">Matplotlib backend</h5>
 <p>Matplotlib is a Python module for scientific plotting.  With this
 backend, you can create Ipe figures directly from matplotlib.
 
-<h5 id="id15">Figtoipe</h5>
+<h5 id="id16">Figtoipe</h5>
 <p><span class="tex-emph">figtoipe</span> converts figures made with Xfig to Ipe's XML format.
 It does not handle all the features of Xfig.  <span class="tex-emph">figtoipe</span> was
 improved and is currently maintained by Alexander B&uuml;rger. Thank you!
 
-<h5 id="id16">ipe5toxml</h5>
+<h5 id="id17">ipe5toxml</h5>
 <p>If you still have figures that were made with Ipe&nbsp;5, you can use this
 program to convert them to the format understood by Ipe&nbsp;6. You can
 then run <span class="tex-emph">ipe6upgrade</span> to convert them to Ipe&nbsp;7 format.  The
